# us-lapse-poc

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: application.md  dataset.md  metrics.md  models.md  results.md
notebooks/: 00_howto_end_to_end.ipynb
scripts/: export_uslapseagent.R
src/lapse_poc/: settings.py  utils.py
src/lapse_poc/analysis/: __init__.py  embed_drivers_into_readme.py  logreg_drivers.py  torch_permutation_importance.py
src/lapse_poc/api/: app.py
src/lapse_poc/data/: build_features.py  preprocessing.py  torch_dataset.py
src/lapse_poc/eval/: metrics.py
src/lapse_poc/models/: tabular.py  train_logreg.py  train_torch.py
tests/: test_build_features_smoke.py  test_tabular_forward.py
