[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-lapse-poc"
version = "0.1.0"
description = "US Whole Life lapse prediction PoC (uslapseagent) with pandas + DuckDB + PyTorch + FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"numpy>=1.24",
"pandas>=2.0",
"duckdb>=1.0.0",
"pyarrow>=14.0.0",
"scikit-learn>=1.3",
"torch>=2.0",
"tqdm>=4.66",
"joblib>=1.3",
"matplotlib>=3.7",
"fastapi>=0.110",
"uvicorn[standard]>=0.27",
"pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
"pytest>=7.4",
"pytest-cov>=4.1",
"ruff>=0.5",
"black>=24.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]